# fgsim

./: .gitignore  .gitmodules  .venv  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  workspace.code-workspace
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
fgsim/: __init__.py  __main__.py  cli.py  config.py  data_dumper.py  data_loader.py  default.yaml  model.py  plot.py  run.py  train.py  utils.py
fgsim/geo/: HGCalShowers.py  HGCal_utils.py  cpptest.cpp  cpptest.hpp  loader.py  mapback.py  mapper.py
fgsim/geo/tests/: test_mapper.py
fgsim/regression/: Regression_GraphNet.py  utils.py
fgsim/train/: control.py  generate.py  holder.py  model.py  train.py
fgsim/utils/: count_parameters.py  istarmap.py  logger.py  memory.py  timeit.py
tests/: __init__.py  test___main__.py  test_fgsim.py  test_run.py
wd/default/: config.yaml
