[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | fgsim/geo/libs 
  )
)
'''

[build-system]
requires = ["setuptools", "wheel", 'pybind11==2.6.1','numpy==1.19.4']
build-backend = "setuptools.build_meta"